[package]
name = "libressl-pnacl-sys"
version = "2.1.1"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
build = "build.rs"
description = "openssl linking provider for PNaCl/NaCl targets."
license = "MIT"
repository = "https://github.com/DiamondLovesYou/libressl-pnacl-sys"

[[lib]]
name = "cross-platform-ssl-link"
path = "lib.rs"

[build-dependencies.pnacl-build-helper]
version = "*"
