[package]
name = "libressl-pnacl-sys"
version = "2.1.5"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
build = "build.rs"
description = "openssl linking provider for PNaCl/NaCl targets."
license = "MIT"
repository = "https://github.com/DiamondLovesYou/libressl-pnacl-sys"

[lib]
name = "libressl_pnacl_sys"
path = "lib.rs"

[build-dependencies.pnacl-build-helper]
version = "1.4"
